bk_ida/gccida/c0/find_mem_givs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/loop.c:5893:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+48h] [rbp-88h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/loop.c:5893:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+48h] [rbp-88h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/loop.c:5900:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+84h] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/loop.c:5934:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa)) ) 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/loop.c:5934:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa)) ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/loop.c:5936:1: error: use of undeclared identifier 'v'
v = ( induction_1 *)xmalloc( 0xA8uLL); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/loop.c:5936:20: error: expected expression
v = ( induction_1 *)xmalloc( 0xA8uLL); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/loop.c:5936:7: error: use of undeclared identifier 'induction_1'
v = ( induction_1 *)xmalloc( 0xA8uLL); 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/loop.c:5939:1: error: use of undeclared identifier 'v'
v, 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/loop.c:5951:1: error: use of undeclared identifier 'v'
v->mem = xa; 
^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_mem_givs/src/obj/loop.o] Error 1
